python-testing-cpu-ram/yaml/app-base-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-base-test
    app.kubernetes.io/name: app-base-test
  name: app-base-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app-base-test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app-base-test
        deployment: app-base-test
    spec:
      containers:
      - env:
        - name: SLEEP_TEST
          value: "0"
        image: quay.io/rh-ee-creyesma/python-img-api:test-cpu-ram
        imagePullPolicy: IfNotPresent
        name: app-base-test
        ports:
        - containerPort: 5000
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 400Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
