python-testing-cpu-ram/yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-base-test
    app.kubernetes.io/name: app-base-test
  name: app-base-test
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-base-test
    deployment: app-base-test
  sessionAffinity: None
  type: ClusterIP
