python-testing-cpu-ram/yaml/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-base-test
  name: app-base-test
spec:
  port:
    targetPort: 5000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: app-base-test
    weight: 100
  wildcardPolicy: None
